# stt_local

./: .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  start.sh  test_small.sh  test_tiny.sh  vite.config.ts  vitest.config.ts
backend/: .coverage  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/audio/: normalizer.py
backend/app/engine/: detector.py  factory.py  processor.py
backend/app/routes/: health.py  upload.py  websocket.py
backend/scripts/: install_backend.sh
backend/stt_local_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_detector.py  test_factory.py  test_main.py  test_normalizer.py  test_processor.py  test_upload.py  test_websocket.py
frontend/: README.md  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/audio/: capture.test.ts  capture.ts  chunker.ts  types.ts  (+2 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/: setup.ts
src/: app.html  hooks.server.ts
src/lib/audio/: capture.test.ts  capture.ts  chunker.test.ts  types.ts
src/lib/components/: LanguageSelector.test.ts  MicControl.svelte  MicControl.test.ts  ModelStatus.svelte  ModelStatus.test.ts  SettingsPanel.svelte  SettingsPanel.test.ts  TranscriptDisplay.svelte  Waveform.svelte  Waveform.test.ts
src/lib/state/: app.svelte.test.ts  app.svelte.ts  transcript.svelte.test.ts
src/lib/utils/: format.test.ts
src/lib/whisper/: manager.test.ts  manager.ts  transcriber.test.ts  transcriber.ts  types.ts
src/routes/: +page.svelte
tests/: setup.ts
(+27 files in other folders)
